force-app/main/default/objects/simplesurvey__Survey__c/fields/LookupNamesList__c.field-meta.xml
<CustomField>
    <fullName>LookupNamesList__c</fullName>
    <inlineHelpText>Confirm the names of the ex-employee(s) you would Ubiquity to locate - write &quot;ALL&quot; for all terminees</inlineHelpText>
    <label>LookupNamesList</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>