force-app/main/default/objects/simplesurvey__Survey__c/fields/LookUpNumberofEmployees__c.field-meta.xml
<CustomField>
    <fullName>LookUpNumberofEmployees__c</fullName>
    <inlineHelpText>Confirm the number of ex-employee(s) you would like Ubiquity to locate:</inlineHelpText>
    <label>LookUpCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>