force-app/main/default/objects/simplesurvey__Survey__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Messaging Session associated with the Survey.</description>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>