force-app/main/default/objects/simplesurvey__Survey__c/fields/Mobile_for_Text_Msg__c.field-meta.xml
<CustomField>
    <fullName>Mobile_for_Text_Msg__c</fullName>
    <inlineHelpText>By entering your mobile phone number below, you are confirming that you’d like to receive text messages from Ubiquity Retirement + Savings.</inlineHelpText>
    <label>Mobile for Text Msg</label>
    <type>Phone</type>
</CustomField>