force-app/main/default/objects/simplesurvey__Survey__c/fields/Navigation_Ease__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Ease__c</fullName>
    <label>Navigation Ease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>