force-app/main/default/objects/simplesurvey__Survey__c/fields/NewQuestion__c.field-meta.xml
<CustomField>
    <fullName>NewQuestion__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>New Question</inlineHelpText>
    <label>New_Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>