force-app/main/default/objects/simplesurvey__Survey__c/fields/Newsletter_improving__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_improving__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What can we do to improve the Newsletter?</inlineHelpText>
    <label>Newsletter improving</label>
    <type>TextArea</type>
</CustomField>