force-app/main/default/objects/simplesurvey__Survey__c/fields/Newsletter_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Satisfaction__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How satisfied are you with the newsletter</inlineHelpText>
    <label>Newsletter Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>