force-app/main/default/objects/simplesurvey__Survey__c/fields/Newsletter_Topics__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Topics__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What Newsetter topics are most interesting to you? (select all that apply)</inlineHelpText>
    <label>Newsletter Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan management</fullName>
            </value>
            <value>
                <fullName>Legal compliance</fullName>
            </value>
            <value>
                <fullName>New retirement services/products</fullName>
            </value>
            <value>
                <fullName>Reminders</fullName>
            </value>
            <value>
                <fullName>Employee participation in plan</fullName>
            </value>
            <value>
                <fullName>Financial wellness education</fullName>
            </value>
            <value>
                <fullName>Industry Trends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>