force-app/main/default/objects/simplesurvey__Survey__c/fields/Not_at_all_prepared_details__c.field-meta.xml
<CustomField>
    <fullName>Not_at_all_prepared_details__c</fullName>
    <inlineHelpText>Please provide additional detail to help our teams</inlineHelpText>
    <label>Not at all prepared details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>