force-app/main/default/objects/simplesurvey__Survey__c/fields/Not_Prepared_Detail__c.field-meta.xml
<CustomField>
    <fullName>Not_Prepared_Detail__c</fullName>
    <inlineHelpText>Please provide additional detail to help our teams</inlineHelpText>
    <label>Not Prepared Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>