force-app/main/default/objects/simplesurvey__Survey__c/fields/NPS_Detractor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Detractor__c</fullName>
    <description>Flags NPS Survey as Detractor for use with overall NPS Calc - https://www.getfeedback.com/resources/salesforce/measure-nps-salesforce/</description>
    <formula>IF((VALUE(TEXT( NPS__c ))) &lt; 7, 1, 0)</formula>
    <inlineHelpText>1 = Promoter 0 = Not a Detractor</inlineHelpText>
    <label>NPS Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>