force-app/main/default/objects/simplesurvey__Survey__c/fields/NPS_Number__c.field-meta.xml
<CustomField>
    <fullName>NPS_Number__c</fullName>
    <description>Formula to convert NPS Picklist values of 1-10 to numeric value 1-10 for reporting functions/formulas</description>
    <formula>VALUE(Text( NPS__c ))</formula>
    <inlineHelpText>Formula to convert NPS Picklist values of 1-10 to numeric value 1-10 for reporting functions/formulas</inlineHelpText>
    <label>NPS Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>