force-app/main/default/objects/simplesurvey__Survey__c/fields/NPS_Passive__c.field-meta.xml
<CustomField>
    <fullName>NPS_Passive__c</fullName>
    <description>Flags NPS Survey as Passive for use with overall NPS Calc - https://www.getfeedback.com/resources/salesforce/measure-nps-salesforce/</description>
    <formula>IF(AND

(VALUE(TEXT( NPS__c )) &gt; 6 ,  (VALUE(TEXT(NPS__c ))) &lt; 9), 1, 0)</formula>
    <inlineHelpText>1 = Promoter 0 = Not Passive</inlineHelpText>
    <label>NPS Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>