force-app/main/default/objects/simplesurvey__Survey__c/fields/NPS_Promoter__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter__c</fullName>
    <description>Flags NPS Survey as Promoter for use with overall NPS Calc - https://www.getfeedback.com/resources/salesforce/measure-nps-salesforce/</description>
    <formula>IF((VALUE(TEXT( NPS__c )))  &gt; 8, 1, 0)</formula>
    <inlineHelpText>1 = Promoter 0 = Not a Promoter</inlineHelpText>
    <label>NPS Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>