force-app/main/default/objects/simplesurvey__Survey__c/fields/NPS_Reason__c.field-meta.xml
<CustomField>
    <fullName>NPS_Reason__c</fullName>
    <inlineHelpText>What is the primary reason for your 1-10 score?  Please be as specific as possible:</inlineHelpText>
    <label>NPS Reason</label>
    <type>TextArea</type>
</CustomField>