force-app/main/default/objects/simplesurvey__Survey__c/fields/Online_Portal_Effort_Score__c.field-meta.xml
<CustomField>
    <fullName>Online_Portal_Effort_Score__c</fullName>
    <label>Online Portal Effort Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>