force-app/main/default/objects/simplesurvey__Survey__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>If you selected &quot;Other&quot; for any answers above, please provide details</inlineHelpText>
    <label>Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>