force-app/main/default/objects/simplesurvey__Survey__c/fields/Other_payroll_provider__c.field-meta.xml
<CustomField>
    <fullName>Other_payroll_provider__c</fullName>
    <inlineHelpText>If your provider/payroll software aren&apos;t listed above, select &quot;Other&quot; from the list and type the name here:</inlineHelpText>
    <label>&quot;Other&quot; payroll provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>