force-app/main/default/objects/simplesurvey__Survey__c/fields/Other_Payroll_ProviderSoftware__c.field-meta.xml
<CustomField>
    <fullName>Other_Payroll_ProviderSoftware__c</fullName>
    <inlineHelpText>Confirm &quot;Other&quot; Payroll Provider/Software</inlineHelpText>
    <label>&quot;Other&quot; Payroll Provider/Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>