force-app/main/default/objects/simplesurvey__Survey__c/fields/Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How would you rate your overall experience with Ubiquity?</inlineHelpText>
    <label>Overall Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very dissatisfied&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>