force-app/main/default/objects/simplesurvey__Survey__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>simplesurvey__Record_Owner__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Owner Role</label>
    <type>Text</type>
</CustomField>