force-app/main/default/objects/simplesurvey__Survey__c/fields/Ownership_Information__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Information__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Please provide the ownership information of the acquired business(es). If no owners, provide controlling interest (50% or more) percentage.</inlineHelpText>
    <label>Ownership Information</label>
    <type>TextArea</type>
</CustomField>