force-app/main/default/objects/simplesurvey__Survey__c/fields/Part_Time_EE_on_Census__c.field-meta.xml
<CustomField>
    <fullName>Part_Time_EE_on_Census__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>If you have part-time employees that work less than 1,000 hours on an annual basis, do you currently report them on your census?</inlineHelpText>
    <label>Part Time EE on Census</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>