force-app/main/default/objects/simplesurvey__Survey__c/fields/PartTime_between_500_and_1000__c.field-meta.xml
<CustomField>
    <fullName>PartTime_between_500_and_1000__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Do you typically hire part-time or seasonal employees that work at least 500 hours but less than 1000 hours?</inlineHelpText>
    <label>Part-Time between 500 and 1000</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>