force-app/main/default/objects/simplesurvey__Survey__c/fields/Past_Due_Payroll_COVID_Other__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Payroll_COVID_Other__c</fullName>
    <inlineHelpText>Other - Please explain:</inlineHelpText>
    <label>Past Due Payroll COVID &quot;Other&quot;</label>
    <type>TextArea</type>
</CustomField>