force-app/main/default/objects/simplesurvey__Survey__c/fields/Past_Due_Payroll_Reason_COVID__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Payroll_Reason_COVID__c</fullName>
    <inlineHelpText>Select a reason 401k contributions were not sent to Ubiquity for processing:</inlineHelpText>
    <label>Past Due Payroll Reason COVID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I will report these contributions to Ubiquity this week</fullName>
            </value>
            <value>
                <fullName>We report all employee contributions annually</fullName>
            </value>
            <value>
                <fullName>We have no employee contributions for this period. - I will login to report the W2 compensation and hours this week</fullName>
            </value>
            <value>
                <fullName>Our company is temporaily closed due to COVID-19</fullName>
            </value>
            <value>
                <fullName>We are currently awaiting funds from the Paycheck Protection Program</fullName>
            </value>
            <value>
                <fullName>Our plan sponsor has changed. - We will report 401k contributions this week</fullName>
            </value>
            <value>
                <fullName>Our company is closed and terminated all employees</fullName>
            </value>
            <value>
                <fullName>Other Reason:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>