force-app/main/default/objects/simplesurvey__Survey__c/fields/Payroll_Frequencies__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Frequencies__c</fullName>
    <inlineHelpText>What is your payroll frequency? (Select all that apply if multiple frequencies)</inlineHelpText>
    <label>Payroll Frequencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>