force-app/main/default/objects/simplesurvey__Survey__c/fields/Payroll_Provider_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider_Contact__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>List name and phone number of payroll contact at your payroll provider</inlineHelpText>
    <label>Payroll Provider Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>