force-app/main/default/objects/simplesurvey__Survey__c/fields/PayrollFrequencyCount__c.field-meta.xml
<CustomField>
    <fullName>PayrollFrequencyCount__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How many payroll frequencies does your company have?</inlineHelpText>
    <label>Payroll_Frequency_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>