force-app/main/default/objects/simplesurvey__Survey__c/fields/Physical_Street__c.field-meta.xml
<CustomField>
    <fullName>Physical_Street__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Street Address: including suite, #, etc</inlineHelpText>
    <label>Physical Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>