force-app/main/default/objects/simplesurvey__Survey__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Plan the CSAT is linked to</description>
    <inlineHelpText>The Plan the CSAT is linked to</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>