force-app/main/default/objects/simplesurvey__Survey__c/fields/Plan_Sponsor_or_Employee__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_or_Employee__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Are you a Plan Sponsor or Employee?</inlineHelpText>
    <label>Plan Sponsor or Employee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan Sponsor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>