force-app/main/default/objects/simplesurvey__Survey__c/fields/PrimaryPayrollFrequency__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPayrollFrequency__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Please confirm your primary payroll frequency</inlineHelpText>
    <label>Primary_Payroll_Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Commission or Bonuses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>