force-app/main/default/objects/simplesurvey__Survey__c/fields/Publicly_Traded__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Traded__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Is your company publicly traded?</inlineHelpText>
    <label>Publicly Traded?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>