force-app/main/default/objects/simplesurvey__Survey__c/fields/Remove_Hrs_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Remove_Hrs_Requirement__c</fullName>
    <inlineHelpText>As a solution, would you be interested in removing the hours requirement from your eligibility provisions?</inlineHelpText>
    <label>Remove Hrs Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I need more info before deciding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>