force-app/main/default/objects/simplesurvey__Survey__c/fields/Replacement_Option__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Option__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Select Option Below To Confirm Replacement for VBALX</inlineHelpText>
    <label>Replacement Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change to new Vanguard Fund List without VBALX - no fees apply -</fullName>
            </value>
            <value>
                <fullName>Remove VBALX from current lineup and replace with fund - fee applies -</fullName>
            </value>
            <value>
                <fullName>Make no change and keep VBALX - transaction fees continue -</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>