force-app/main/default/objects/simplesurvey__Survey__c/fields/Requested_toolsresources__c.field-meta.xml
<CustomField>
    <fullName>Requested_toolsresources__c</fullName>
    <inlineHelpText>What tools/resources would you like to have access to on Ubiquity&apos;s platform?</inlineHelpText>
    <label>Requested tools/resources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tips/training on managing the 401(k) plan</fullName>
            </value>
            <value>
                <fullName>Financial wellness education for employees</fullName>
            </value>
            <value>
                <fullName>Investment guidance for employees</fullName>
            </value>
            <value>
                <fullName>Calculators and tools to evaluate fund performance</fullName>
            </value>
            <value>
                <fullName>Additional 401(k) provisions (ROTH, Custom Eligibility/Vesting)</fullName>
            </value>
            <value>
                <fullName>Health Savings Accounts (HSAs)</fullName>
            </value>
            <value>
                <fullName>Higher saving limits and/or Profit Sharing</fullName>
            </value>
            <value>
                <fullName>Individual Retirement Accounts (IRAs)</fullName>
            </value>
            <value>
                <fullName>Socially responsible investment options</fullName>
            </value>
            <value>
                <fullName>360 payroll integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>