force-app/main/default/objects/simplesurvey__Survey__c/fields/Sales_Advisor_Prep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Advisor_Prep__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How prepared were you by your sales rep or financial advisor for the implementation process?</inlineHelpText>
    <label>Sales Advisor Prep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Well prepared - met my expectations</fullName>
            </value>
            <value>
                <fullName>Somewhat prepared</fullName>
            </value>
            <value>
                <fullName>Not prepared / did not meet my expectations</fullName>
            </value>
            <value>
                <fullName>I purchased directly without Sales or Advisor rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>