force-app/main/default/objects/simplesurvey__Survey__c/fields/Satisfaction_with_UBQT_Platform__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_UBQT_Platform__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How satisfied are you with the tools/resources available to you on Ubiquity&apos;s platform?</inlineHelpText>
    <label>Satisfaction with UBQT Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very dissatisfied&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>