force-app/main/default/objects/simplesurvey__Survey__c/fields/Seasonal_EE_5001000_hrs__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_EE_5001000_hrs__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Do you typically hire part-time or seasonal employees that work at least 500 hours but less than 1000 hours?</inlineHelpText>
    <label>Seasonal EE 500-1,000 hrs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>