force-app/main/default/objects/simplesurvey__Survey__c/fields/SendNoticeCount__c.field-meta.xml
<CustomField>
    <fullName>SendNoticeCount__c</fullName>
    <inlineHelpText>If you elect option A or B, confirm the number of ex-employee(s) you would like Ubiquity to send certified notices to.  This can include ex-employee(s) Ubiquity will look up addresses for and those whose address online is already current.</inlineHelpText>
    <label>SendNoticeCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>