force-app/main/default/objects/simplesurvey__Survey__c/fields/SingleK_Features__c.field-meta.xml
<CustomField>
    <fullName>SingleK_Features__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Which of the following features have you enjoyed most about your Ubiquity experience?</inlineHelpText>
    <label>SingleK Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fast and effective issue resolution</fullName>
            </value>
            <value>
                <fullName>Friendly customer support</fullName>
            </value>
            <value>
                <fullName>Low annual fee</fullName>
            </value>
            <value>
                <fullName>Ability to take a loan</fullName>
            </value>
            <value>
                <fullName>Ability to make a ROTH contribution</fullName>
            </value>
            <value>
                <fullName>Ability to complete tax forms</fullName>
            </value>
            <value>
                <fullName>Ability to upgrade your retirement plan to maximize your tax withholdings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>