force-app/main/default/objects/simplesurvey__Survey__c/fields/Somewhat_Prepared_Details__c.field-meta.xml
<CustomField>
    <fullName>Somewhat_Prepared_Details__c</fullName>
    <inlineHelpText>Please provide additional detail to help our teams</inlineHelpText>
    <label>Somewhat Prepared Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>