force-app/main/default/objects/simplesurvey__Survey__c/fields/SponsorTrustee__c.field-meta.xml
<CustomField>
    <fullName>SponsorTrustee__c</fullName>
    <inlineHelpText>Are you the Trustee or the Plan Sponsor?</inlineHelpText>
    <label>Sponsor_Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Both Trustee &amp; Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>