force-app/main/default/objects/simplesurvey__Survey__c/fields/Stock_or_Asset_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Stock_or_Asset_Acquisition__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Was it a stock or asset acquisition?</inlineHelpText>
    <label>Stock or Asset Acquisition?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Both Stock &amp; Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>