force-app/main/default/objects/simplesurvey__Survey__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <inlineHelpText>Enter street address -  including suite, #, etc.</inlineHelpText>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>